Bug 1665230 - Enable CardDAV out of the box. r=mkmelin
Differential Revision: https://phabricator.services.mozilla.com/D99285

--HG--
extra : rebase_source : 38128b27c70c944e5868a93679d7e2576eaf670d
extra : amend_source : f3195dc99ff02108318663953b164f6914ff8f1c

--- a/mail/themes/shared/mail/cardDAV.css
+++ b/mail/themes/shared/mail/cardDAV.css
@@ -2,24 +2,6 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, you can obtain one at http://mozilla.org/MPL/2.0/. */
 
-#bigScaryWarning {
-  background-color: #FFE900;
-  border-color: #F2D00F;
-  color: -moz-DialogText;
-  padding: 4px;
-  white-space: normal;
-}
-
-#bigScaryWarning image {
-  -moz-context-properties: fill;
-  fill: currentColor;
-  margin: 4px 8px;
-}
-
-#bigScaryWarning description {
-  width: 30em;
-}
-
 #carddav-provider {
   height: 1.8em;
 }
